# motrics

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  codecov.yml  pyproject.toml  release-plz.toml  ruff.toml  ty.toml
.github/: dependabot.yml
.github/workflows/: benchmark-real.yml  benchmark.yml  ci.yml  release-plz.yml  release-tag.yml  release.yml
benchmarks/: README.md  benchmark.py  download.py  fixtures.py  generate_fixtures.py  plot_speedup.py
benchmarks/data/MOTRICS-SYNTH-01/: pred.txt
benchmarks/data/MOTRICS-SYNTH-01/gt/: gt.txt
benchmarks/data/MOTRICS-SYNTH-02/: pred.txt
benchmarks/data/MOTRICS-SYNTH-02/gt/: gt.txt
benchmarks/data/MOTRICS-SYNTH-03/: pred.txt
benchmarks/data/MOTRICS-SYNTH-03/gt/: gt.txt
python/motrics/: __init__.py  _motrics.pyi  _types.py  bdd100k.py  davis.py  frames.py  kitti.py  kitti_3d.py  kitti_mots.py  motchallenge.py
python/motrics/compat/: __init__.py
python/motrics/compat/motmetrics/: __init__.py  distances.py  metrics.py  mot.py
python/motrics/compat/trackeval/: __init__.py  _utils.py  eval.py  evaluate.py
python/motrics/compat/trackeval/datasets/: __init__.py  mot_challenge_2d_box.py
python/motrics/compat/trackeval/metrics/: __init__.py  _base_metric.py  clear.py  count.py  hota.py  identity.py
src/: accumulator.rs  assignment.rs  boxes.rs  clear.rs  hota.rs  identity.rs  iou.rs  iou3d.rs  lib.rs  mask.rs  motmetrics_switches.rs
tests/: conftest.py  test_accumulator.py  test_basic.py  test_bdd100k_preprocessing.py  test_box_inputs.py  test_clear.py  test_compat_motmetrics.py  test_compat_trackeval.py  test_dancetrack.py  test_davis.py  test_evaluate.py  test_hota.py  test_identity.py  test_iou.py  test_iou3d.py  test_kitti.py  test_kitti_3d.py  test_kitti_3d_preprocessing.py  test_kitti_mots.py  test_kitti_mots_preprocessing.py  test_kitti_preprocessing.py  test_mask.py  test_match_boxes_3d.py  test_match_masks.py  test_matching.py  test_motchallenge.py  test_motchallenge_preprocessing.py  test_motmetrics_switches.py  test_parity.py
