[build-system]
# numpy is needed at build time too: the compiled extension links against
# PyO3-numpy, whose build script queries the ambient Python's numpy install.
requires = ["maturin>=1.9,<2.0", "numpy>=1.24"]
build-backend = "maturin"

[project]
name = "motrics"
description = "An extremely fast MOT and HOTA metrics library, written in Rust."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Kevin Serrano" }]
keywords = ["mot", "hota", "tracking", "metrics", "computer-vision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Typing :: Typed",
]
# Version is sourced from Cargo.toml by maturin (see [tool.maturin] below).
dynamic = ["version"]
# The core accepts boxes as NumPy arrays for a zero-copy read path
# (compute_clear/compute_identity/compute_hota/iou_matrix/match_boxes).
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
# motrics.compat.motmetrics' MetricsHost.compute() returns a pandas DataFrame,
# matching motmetrics.
compat = ["pandas>=2.0"]

[project.urls]
Homepage = "https://github.com/kevinconka/motrics"
Repository = "https://github.com/kevinconka/motrics"
Issues = "https://github.com/kevinconka/motrics/issues"

[tool.maturin]
# Mixed Rust/Python layout: pure-Python sources live under python/, the compiled
# extension is exposed as the private `motrics._motrics` module.
python-source = "python"
module-name = "motrics._motrics"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "maturin>=1.9,<2.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "ty>=0.0.1a1",
]
# Reference evaluators for parity + benchmarking (scipy comes in transitively).
# pycocotools also arrives transitively via trackeval, but is declared directly
# since motrics' own mask RLE codec is validated against its output.
parity = [
    "numpy>=2.2.6",
    "trackeval>=1.3.0",
    "motmetrics>=1.4.0",
    "pycocotools>=2.0.7",
]
# For regenerating the README benchmark chart (benchmarks/plot_speedup.py).
plot = ["matplotlib>=3.8"]

[tool.pytest.ini_options]
# Let tests import the shared benchmark fixtures (benchmarks.fixtures).
pythonpath = ["."]
